--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
         .right-gallery {
             position: fixed;
             top: 50%;
-            right: 10px;
+            right: 20px;
             transform: translateY(-50%);
             width: 150px;
             display: flex;
@@ -268,7 +268,7 @@
 <!-- LEFT BOX TOP -->
 <div class="left-box-top">
     <img src="pa1.jpg" class="top-photo">
-    <div class="photo-name">⚫ श्री.जीवराज डापकर,उपविभागीय अधिकारी कार्यालय, गंगाखेड</div>
+    <div class="photo-name">⚫ श्री.जीवराज डापकर,उपविभागीय अधिकारी, गंगाखेड</div>
 </div>
 
 <!-- LEFT MENU -->
@@ -506,9 +506,9 @@ document.addEventListener("click", function (e) {
 
 <!-- RIGHT IMAGES -->
 <div class="right-gallery">
-    <img src="eco.jpg">
-    <img src="eco.jpg">
-    <img src="eco.jpg">
+    <img src="nrs.jpg">
+    <img src="nrs.jpg">
+    <img src="nrs.jpg">
 </div>
 
 </body>
