--- a/index.html
+++ b/index.html
@@ -19,16 +19,13 @@
         /* BACKGROUND VIDEO FIX */
         #bgVideo {
             position: fixed;
-            top: 50%;
-            left: 50%;
-            min-width: 100%;
-            min-height: 100%;
-            width: auto;
-            height: auto;
-            transform: translate(-50%, -50%);
-            z-index: -1;
-            object-fit: cover;
-        }
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    object-fit: fill !important;  /* Mobile + Laptop same */
+    z-index: -1;
+}
 
         .welcome-container {
             position: absolute;
@@ -239,53 +236,7 @@
             font-weight: bold;
             color: #ffea00;
             text-shadow: 0 0 8px black;
-            /* MOBILE FIX – SAME AS LAPTOP VIEW */
-@media (max-width: 768px) {
-
-    /* Background video perfect fullscreen */
-    #bgVideo {
-        object-fit: cover;
-        width: 100vw;
-        height: 100vh;
-    }
-
-    /* TOP TITLE center same size */
-    .top-title {
-        font-size: 28px !important;
-        white-space: nowrap;
-    }
-
-    /* Search box center & same size as laptop */
-    #vkSearchBox {
-        width: 360px !important;
-        max-width: 95%;
-        margin-top: 180px !important;
-    }
-
-    /* Left top photo */
-    .left-box-top {
-        top: 110px !important;
-        left: 10px !important;
-        width: 120px !important;
-    }
-
-    /* Left menu box */
-    .left-box {
-        top: 260px !important;
-        left: 10px !important;
-        width: 180px !important;
-        font-size: 12px !important;
-    }
-
-    /* Right side gallery – same laptop position */
-    .right-gallery {
-        right: 10px !important;
-        top: 55% !important;
-        width: 110px !important;
-        transform: translateY(-50%) !important;
-    }
-}
-
+            
         }
     </style>
 </head>
@@ -300,7 +251,7 @@
 <!-- TOP HEADER -->
 <div style="
     position: fixed;
-    top: 3mm;
+    top: 6mm;
     left: 50%;
     transform: translateX(-50%);
     z-index: 9999;">
