--- a/index.html
+++ b/index.html
@@ -19,13 +19,16 @@
         /* BACKGROUND VIDEO FIX */
         #bgVideo {
             position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
-    height: 100vh;
-    object-fit: fill !important;  /* Mobile + Laptop same */
-    z-index: -1;
-}
+            top: 50%;
+            left: 50%;
+            min-width: 100%;
+            min-height: 100%;
+            width: auto;
+            height: auto;
+            transform: translate(-50%, -50%);
+            z-index: -1;
+            object-fit: cover;
+        }
 
         .welcome-container {
             position: absolute;
@@ -106,7 +109,7 @@
         }
 
         #vkSearchBox {
-            width: 360px;
+            width: 300px;
             margin: auto;
             margin-top: 150px;
             background: rgba(0,0,0,0.55);
