--- a/index.html
+++ b/index.html
@@ -213,6 +213,14 @@
     color: #ff0;
     border-radius: 4px;
     font-weight: bold;
+    /* MOBILE FIX: Right gallery ko upar laane ke liye */
+@media (max-width: 600px) {
+    .right-gallery {
+        top: 120px !important;   /* Contact Box ke just niche */
+        transform: none !important;
+    }
+}
+
 }
 
 
