--- a/index.html
+++ b/index.html
@@ -508,16 +508,18 @@ document.addEventListener("click", function (e) {
     box.style.display = "block";
     box.innerHTML = `
         <b>Company Name:</b> Nrs Multibizz Pvt. Ltd<br>
-        <b>Tagline:</b> Smart Digital Access for Everyone<br><br>
+<b>Tagline:</b> Smart Digital Access for Everyone<br><br>
 
-        <b>Description:</b><br>
-        We provide fast and reliable tools to access agricultural and public data in a simple and user-friendly way.<br><br>
+<b>Description:</b><br>
+We provide fast and reliable tools to access agricultural and public data in a simple and user-friendly way.<br><br>
 
-        <b>Founded:</b> 2024<br>
-        <b>Location:</b> India<br>
-        <b>Service Type:</b> Digital Data Access & Automation Tools<br><br>
+<b>Founded:</b> 2024<br>
+<b>Location:</b> India<br>
+<b>Service Type:</b> Digital Data Access & Automation Tools<br><br>
 
-        <b>Developed by:</b> sarole niteen Contact 7499681291
+<b>Developed by:</b> sarole niteen Contact 7499681291<br>
+<b>Head of Publicity:</b> Sudip Chorghade Grammahsul Adhikari Palam
+
     `;
 }
 
