--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             font-family: Arial, sans-serif;
 
             /* ▶ BACKGROUND IMAGE ADDED */
-            background-image: url('eco.jpg');
+            background-image: url('farm12.jpg');
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
