--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             font-family: Arial, sans-serif;
 
             /* ▶ BACKGROUND IMAGE ADDED */
-            background-image: url('farm12.JPG');
+            background-image: url('sawan.jpg');
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
@@ -65,7 +65,7 @@
 
         .left-box {
             position: absolute;
-            top: 220px;
+            top: 420px;
             left: 20px;
             width: 220px;
             background-color: rgba(0, 0, 0, 0.6);
@@ -273,8 +273,8 @@
 
 <!-- LEFT BOX TOP -->
 <div class="left-box-top">
-    <img src="pa1.jpg" class="top-photo">
-    <div class="photo-name">⚫ श्री.जीवराज डापकर,उपविभागीय अधिकारी, गंगाखेड</div>
+    <img src="co1.jpg" class="top-photo">
+    <div class="photo-name">⚫ श्री. संजयसिंह चव्हाण, (भा.प्र.से.) जिल्हाधिकारी परभणी</div>
 </div>
 
 <!-- LEFT MENU -->
@@ -526,6 +526,61 @@ We provide fast and reliable tools to access agricultural and public data in a s
         <img src="purna1.jpg">
         <div class="img-text">श्री माधवराव बोधीकर तहसिलदार पूर्णा </div>
     </div>
+
+</div>
+<!-- LEFT SIDE TOP PHOTO + NAME BOX -->
+<style>
+  .left-profile-box {
+    position: absolute;
+    left: 20px;
+    top: 200px;
+    width: 140px;
+    text-align: center;
+    z-index: 999;
+    font-family: Arial, sans-serif;
+  }
+
+  .left-profile-box .photo-frame {
+    width: 130px;
+    height: 130px;
+    margin: auto;
+    padding: 6px;
+    border-radius: 15px;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.5);
+  }
+
+  .left-profile-box img {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+    object-fit: cover;
+    border: 3px solid rgba(255,255,255,0.5);
+  }
+
+  .left-profile-box .name {
+    margin-top: 8px;
+    font-weight: bold;
+    color: #fffb00;
+    font-size: 14px;
+    text-shadow: 0 2px 6px rgba(0,0,0,0.7);
+  }
+
+  .left-profile-box .post {
+    display: block;
+    font-size: 12px;
+    margin-top: 4px;
+    color: #ffe082;
+    background: rgba(0,0,0,0.45);
+    padding: 4px;
+    border-radius: 6px;
+  }
+</style>
+
+<div class="left-profile-box">
+  <div class="photo-frame">
+    <img src="pa1.jpg" alt="Profile">
+  </div>
+  <div class="name">⚫ श्री.जीवराज डापकर,उपविभागीय अधिकारी, गंगाखेड</div>
 
 </div>
 
