--- a/index.html
+++ b/index.html
@@ -501,7 +501,7 @@ We provide fast and reliable tools to access agricultural and public data in a s
 
 <b>Founded:</b> 2024<br>
 <b>Location:</b> India<br>
-<b>Service Type:</b> Digital Data Access & Automation Tools<br><br>
+<b>Service Type:</b> Data Entry & Processing Tools<br><br>
 
 <b>Developed by:</b> sarole niteen Contact 7499681291<br>
 <b>Head of Publicity:</b> Sudip Chorghade Grammahsul Adhikari Palam
