--- a/index.html
+++ b/index.html
@@ -583,6 +583,277 @@ We provide fast and reliable tools to access agricultural and public data in a s
   <div class="name">⚫ श्री.जीवराज डापकर,उपविभागीय अधिकारी, गंगाखेड</div>
 
 </div>
+<!-- ================== GOVT STYLE BUTTON PANEL ================== --> 
+<style>
 
-</body>
-</html>
+/* ====== POSITION CONTROL ====== */
+.g-panel-container {
+    margin-top: -460px;
+    margin-left: 0px;
+    margin-right: -150px;
+    display: flex;
+    justify-content: center;
+}
+
+/* ====== BUTTON ROW ====== */
+.g-btn-row {
+    display: flex;
+    gap: 12px;
+    flex-wrap: wrap;
+}
+
+/* ====== BUTTON DEFAULT STYLE ====== */
+.g-btn {
+    border-radius: 6px;
+    padding: 6px 12px;
+    font-family: 'Arial', sans-serif;
+    font-weight: 500;
+    font-size: 16px;
+    text-align: center;
+    cursor: pointer;
+    min-width: 100px;
+    border: 3px solid;
+    transition: 0.2s;
+    background: white;
+}
+
+/* ====== COLORS ====== */
+.g-blue { border-color: #0c73b8; color: #0c73b8; }
+.g-orange { border-color: #e28c1b; color: #e28c1b; }
+.g-red { border-color: #c62828; color: #c62828; }
+.g-lightblue { border-color: #2a8acb; color: #2a8acb; }
+.g-green { border-color: #2f8f2f; color: #2f8f2f; }
+
+.g-btn:hover {
+    background: #f2f8ff;
+    transform: translateY(-3px);
+}
+
+/* ====== ARJ DROPDOWN ====== */
+.arj-dropdown {
+    display: none;
+    flex-direction: column;
+    background: white;
+    border: 2px solid #e28c1b;
+    margin-top: 8px;
+    border-radius: 6px;
+    padding: 8px 0;
+    width: 180px;
+    position: absolute;
+    z-index: 999;
+    top: 100% !important;
+    left: 0;
+}
+
+.arj-item {
+    padding: 8px 12px;
+    cursor: pointer;
+    text-decoration: none;
+    color: black;
+    font-size: 15px;
+    border-bottom: 1px solid #ddd;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.arj-download-btn {
+    background: #0c73b8;
+    color: white;
+    padding: 4px 6px;
+    border-radius: 4px;
+    font-size: 12px;
+}
+.arj-download-btn {
+    background: #0c73b8;
+    color: white;
+    padding: 4px 6px;
+    border-radius: 4px;
+    font-size: 12px;
+    pointer-events: none;   /* ⭐ NEW: span क्लिक होणार नाही */
+}
+
+
+.arj-item {
+    transition: all 0.3s ease;
+}
+
+.arj-item:hover {
+    background: linear-gradient(90deg, #d60000, #ffea70);
+    color: #000;
+    padding-left: 18px;
+}
+
+.arj-item:last-child {
+    border-bottom: none;
+}
+
+.close-arj {
+    padding: 8px;
+    background: #e28c1b;
+    color: white;
+    text-align: center;
+    cursor: pointer;
+    font-weight: bold;
+    border-radius: 4px;
+    margin: 5px 10px 0 10px;
+}
+
+.close-arj:hover {
+    background: #c97812;
+}
+
+.position-wrap {
+    position: relative;
+    display: flex;
+    align-items: center;
+}
+
+/* ================= AGRI POPUP ================= */
+.agri-popup {
+    display: none;
+    position: absolute;
+    top: 40px;
+    left: 0;
+    z-index: 9999;
+}
+
+.agri-box {
+    background: #fff;
+    width: 280px;
+    padding: 18px;
+    border-radius: 10px;
+    box-shadow: 0 5px 15px rgba(0,0,0,0.25);
+    text-align: center;
+}
+
+.agri-box h3 {
+    margin-bottom: 10px;
+    color: #d10000;
+    font-size: 21px;
+}
+
+.agri-box p {
+    font-size: 15px;
+    color: #000;
+    line-height: 20px;
+}
+
+.agri-link {
+    display: block;
+    background: #0c73b8;
+    color: white;
+    padding: 10px;
+    margin-top: 15px;
+    text-decoration: none;
+    border-radius: 6px;
+    font-weight: bold;
+}
+
+.agri-close {
+    background: #444;
+    color: white;
+    padding: 8px;
+    margin-top: 10px;
+    border-radius: 6px;
+    cursor: pointer;
+}
+
+.agri-close:hover {
+    background: #222;
+}
+
+</style>
+
+
+<!-- ================== BUTTON PANEL ================== -->
+<div class="g-panel-container">
+    <div class="g-btn-row">
+
+        <a class="g-btn g-blue" onclick="alert('Work in Progress')">PDE अर्ज </a>
+
+        <!-- अर्ज Dropdown -->
+        <div class="position-wrap">
+
+            <div class="g-btn g-orange" onclick="toggleArj()">सर्व प्रकारचे अर्ज</div>
+
+            <div class="arj-dropdown" id="arjMenu">
+
+                <a class="arj-item" onclick="alert('Work in Progress')">अर्ज 1 <span class="arj-download-btn">Download</span></a>
+                <a class="arj-item" onclick="alert('Work in Progress')">अर्ज 2 <span class="arj-download-btn">Download</span></a>
+                <a class="arj-item" onclick="alert('Work in Progress')">अर्ज 3 <span class="arj-download-btn">Download</span></a>
+                <a class="arj-item" onclick="alert('Work in Progress')">अर्ज 4 <span class="arj-download-btn">Download</span></a>
+                <a class="arj-item" onclick="alert('Work in Progress')">अर्ज 5 <span class="arj-download-btn">Download</span></a>
+                <a class="arj-item" onclick="alert('Work in Progress')">अर्ज 6 <span class="arj-download-btn">Download</span></a>
+                <a class="arj-item" onclick="alert('Work in Progress')">अर्ज 7 <span class="arj-download-btn">Download</span></a>
+                <a class="arj-item" onclick="alert('Work in Progress')">अर्ज 8 <span class="arj-download-btn">Download</span></a>
+                <a class="arj-item" onclick="alert('Work in Progress')">अर्ज 9 <span class="arj-download-btn">Download</span></a>
+                <a class="arj-item" onclick="alert('Work in Progress')">अर्ज 10 <span class="arj-download-btn">Download</span></a>
+
+                <div class="close-arj" onclick="closeArj()">बंद करा</div>
+
+            </div>
+        </div>
+
+
+        <!-- अग्री पॉपअप बटण -->
+        <div class="position-wrap">
+
+            <a class="g-btn g-red" onclick="openAgriPopup()">अग्री स्टाक स्थिति</a>
+
+            <!-- Popup -->
+            <div id="agriPopup" class="agri-popup">
+                <div class="agri-box">
+
+                    <h3>सूचना</h3>
+
+                    <p>
+                        शेतकरी बांधवांनी खालील बटन वर क्लिक करून  
+                        आधार नंबर टाकून आपले अग्री स्टाक स्थिती तपासावी.
+                    </p>
+
+                    <a class="agri-link" 
+                        href="https://mhfr.agristack.gov.in/farmer-registry-mh/#/checkEnrolmentStatus" 
+                        target="_blank">👉 येथे क्लिक करा</a>
+
+                    <div class="agri-close" onclick="closeAgriPopup()">बंद करा</div>
+
+                </div>
+            </div>
+
+        </div>
+
+        <a class="g-btn g-lightblue" onclick="alert('Work in Progress')">BLANK</a>
+        <a class="g-btn g-green" onclick="alert('Work in Progress')">BLANK</a>
+
+    </div>
+</div>
+
+
+<!-- SCRIPT -->
+<script>
+
+/* ========== MAIN UPDATE: only one open at a time ========== */
+
+function toggleArj() {
+    closeAgriPopup();   // ⭐ नया नियम → दूसरा अपने-आप बंद
+    let menu = document.getElementById("arjMenu");
+    menu.style.display = (menu.style.display === "flex") ? "none" : "flex";
+}
+
+function closeArj() {
+    document.getElementById("arjMenu").style.display = "none";
+}
+
+function openAgriPopup() {
+    closeArj();  // ⭐ नया नियम → दूसरा अपने-आप बंद
+    document.getElementById("agriPopup").style.display = "block";
+}
+
+function closeAgriPopup() {
+    document.getElementById("agriPopup").style.display = "none";
+}
+
+</script>
+
+<!-- ================== END ================== -->
