--- a/index.html
+++ b/index.html
@@ -799,7 +799,7 @@ We provide fast and reliable tools to access agricultural and public data in a s
         <!-- अग्री पॉपअप बटण -->
         <div class="position-wrap">
 
-            <a class="g-btn g-red" onclick="openAgriPopup()">अग्री स्टाक स्थिति</a>
+            <a class="g-btn g-red" onclick="openAgriPopup()">अँग्री स्टाक स्थिति</a>
 
             <!-- Popup -->
             <div id="agriPopup" class="agri-popup">
@@ -809,7 +809,7 @@ We provide fast and reliable tools to access agricultural and public data in a s
 
                     <p>
                         शेतकरी बांधवांनी खालील बटन वर क्लिक करून  
-                        आधार नंबर टाकून आपले अग्री स्टाक स्थिती तपासावी.
+                        आधार नंबर टाकून आपले अँग्री स्टाक स्थिती तपासावी.
                     </p>
 
                     <a class="agri-link" 
