--- a/index.html
+++ b/index.html
@@ -954,7 +954,7 @@ We provide fast and reliable tools to access agricultural and public data in a s
 
         </div>
 
-        <a class="g-btn g-green" onclick="alert('Work in Progress')">BLANK</a>
+        <a class="g-btn g-green" onclick="alert('Work in Progress')">इतर</a>
 
     </div>
 </div>
@@ -1012,7 +1012,7 @@ function closeSolarPopup() {
 
 function sendSolarMsg() {
     let msg = document.getElementById("solarText").value;
-    let num = "917499681291";   // ← आपला WhatsApp नंबर येथे टाका
+    let num = "91**********";   // ← आपला WhatsApp नंबर येथे टाका
 
     if(msg.trim() === "") {
         alert("कृपया समस्या लिहा!");
